a bug causes the layout shift when project details page load is fixed

--- a/styles/Home.module.sass
+++ b/styles/Home.module.sass
@@ -448,7 +448,7 @@ $shadows-big: multiple-box-shadow(250)
 .ProjectDetails
   margin-top: 2vh
   margin-left: 9vh
-  font-size: 2vh
+  font-size: 4vw
 
 .ProjectLinks
   display: flex
@@ -570,3 +570,6 @@ $shadows-big: multiple-box-shadow(250)
 
 .MessageInput:focus::placeholder
   color: transparent
+
+.detailsSmall
+  font-size: 3.2vw
